# schemdraw-ughent

./: .gitignore  CHANGES.txt  LICENSE  MANIFEST.in  README.md  setup.cfg
docs/development/: README.md
schemdraw_ughent/hse/: __init__.py  pictorial.py
test/: test.ipynb
