[metadata]
name = schemdraw-ughent
version = attr: schemdraw_ughent.__version__
author = Senne Vanden Berghe
author_email = sennevandenberghe2002@gmail.com
url = https://github.com/S3nn3k3/schemdraw-ughent
description = Electrical circuit schematic drawing
long_description = file: README.md
long_description_content_type = text/markdown
keywords = circuit, schematic, electrical, schemdraw, ghent, gent
license = MIT
project_urls =
    Documentation = https://github.com/S3nn3k3/schemdraw-ughent
    Source Code = https://github.com/S3nn3k3/schemdraw-ughent
classifiers =
        Development Status :: 4 - Beta
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Intended Audience :: Education
        Intended Audience :: Science/Research
        Intended Audience :: End Users/Desktop

[options]
packages = find:
zip_safe = False
python_requires = >= 3.8
include_package_data = True
install_requires = schemdraw==0.19


[options.package_data]
schemdraw = py.typed